# YOPO-ROS2

./: LICENSE  README.md
Controller/src/so3_control/: CMakeLists.txt  package.xml
Controller/src/so3_control/include/so3_control/: HGDO.h  NetworkControl.h  SO3Control.h  mavros_interface.h
Controller/src/so3_control/launch/: controller_network.launch.py  so3_control.launch.py
Controller/src/so3_control/src/: NetworkControl.cpp  SO3Control.cpp  control_example.cpp  network_control_node.cpp  so3_control_nodelet.cpp
Controller/src/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
Controller/src/so3_quadrotor_simulator/include/quadrotor_simulator/: Quadrotor.h
Controller/src/so3_quadrotor_simulator/launch/: simulator_attitude_control.launch.py  simulator_position_control.launch.py
Controller/src/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
Controller/src/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
Controller/src/utils/cmake_utils/: CMakeLists.txt  package.xml
Controller/src/utils/cmake_utils/cmake/: cmake_modules.cmake
Controller/src/utils/mavros_msgs/: CMakeLists.txt  package.xml
Controller/src/utils/quadrotor_msgs/: CMakeLists.txt  package.xml  ros1_cmakelists.txt  wrongcmake.txt
Controller/src/utils/quadrotor_msgs/include/quadrotor_msgs/: decode_msgs.h  encode_msgs.h
Controller/src/utils/quadrotor_msgs/msg/: LQRTrajectory.msg  Odometry.msg  PolynomialTrajectory.msg  PositionCommand.msg  SO3Command.msg  Serial.msg
Controller/src/utils/quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
Controller/src/utils/uav_utils/: CMakeLists.txt  package.xml
Controller/src/utils/uav_utils/scripts/: odom_to_euler.py  send_odom.py  tf_assist.py
Simulator/src/: CMakeLists.txt  package.xml  sim_odom.py
Simulator/src/config/: config.yaml
Simulator/src/include/: maps.hpp  sensor_simulator.cuh  sensor_simulator.h
Simulator/src/src/: dataset_generator.cpp  maps.cpp  sensor_simulator.cpp  test_simulator.cpp  test_simulator_cuda.cpp
YOPO/: test_yopo_ros.py  yopo2.rviz
YOPO/policy/: yopo_trainer.py
YOPO/saved/YOPO_2/: events.out.tfevents.1761206685.hu-ROG-Zephyrus-G14-GA401QM-GA401QM.9952.0
YOPO/saved/YOPO_3/: events.out.tfevents.1761207413.hu-ROG-Zephyrus-G14-GA401QM-GA401QM.18154.0
