<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sensor_simulator</name>
    <version>0.0.1</version>
    <description>A simple ROS node that publishes odometry with quaternion orientation using AngleAxis for rotations.</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>Eigen3</depend>
    <depend>PCL</depend>
    <depend>OpenCV</depend>
    <depend>yaml-cpp</depend>
    <depend>pcl_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>