<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so3_quadrotor_simulator</name>
  <version>0.0.0</version>
  <description>quadrotor_simulator</description>

  <maintainer email="todo@todo.todo">Kartik Mohta</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/quadrotor_simulator</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>uav_utils</depend>
  <depend>cmake_utils</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>Eigen3</depend>
  <depend>Armadillo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>